--- a/react/src/index.css
+++ b/react/src/index.css
@@ -43,7 +43,7 @@ input:focus {
 .btn-delete {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #097e30;
+    background: #a63d8d;
     border: 0;
     text-decoration: none;
     padding: 15px;
