--- a/react/src/index.css
+++ b/react/src/index.css
@@ -48,7 +48,7 @@ input:focus {
     border: 0;
     text-decoration: none;
     padding: 15px;
-    color: #FFFFFF;
+    color: #f7f4f4;
     font-size: 16px;
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
